Quorum3/Library/Tests/Inheritance/Fail/MultipleInheritanceAmbiguousMethod.quorum
/*
Expected output:
A compiler error -- the proper "Foo" method to call cannot be determined in
this hierarchy.
*/

//C has Foo(), B inherits Foo() from A

class Main is C, B
    action Main
        Foo()
    end
end